--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,5 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
 body {
-  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f0f0f0;
@@ -12,12 +18,23 @@ body {
   background-color: #002c40;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
   text-align: center;
   color: #edf2f4;
-  font-family: 'Montserrat', sans-serif;
+  display: inline;
+}
+
+.logo-header, img {
+  width: 150px;
+  height: 100px;
+  background-size: cover;
+  margin: auto;
+  margin-bottom: 20px;
+  display: inline-block;
 }
 
 .form {
@@ -77,9 +94,17 @@ input[type="number"] {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* p {
-  margin-bottom: 20px;
-} */
+p {
+  margin: 20px 0;
+}
+
+ol {
+  margin: 10px 30px;
+}
+
+li {
+  margin-bottom: 5px;
+}
 
 strong {
   font-weight: bold;
