--- a/client/src/style.css
+++ b/client/src/style.css
@@ -8,7 +8,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
   background-color: #f0f0f0;
 }
 
@@ -58,7 +57,6 @@ input[type="text"] {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
 }
 
 button {
@@ -84,7 +82,6 @@ input[type="number"] {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
 }
 
 #subscription-details {
@@ -93,7 +90,7 @@ input[type="number"] {
   background-color: #f9f9f9;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  font-family: 'Open Sans', sans-serif;
+  overflow: auto;
 }
 
 p {
